// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> adds pulse animation selector 1`] = `
<span
  className="Van-Icon"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg class=\\"Van-u-animation--pulse\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
    }
  }
/>
`;

exports[`<Icon> adds spin animation selector 1`] = `
<span
  className="Van-Icon"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg class=\\"Van-u-animation--spin\\" xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
    }
  }
/>
`;

exports[`<Icon> renders correct markup 1`] = `
<span
  className="Van-Icon"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
    }
  }
/>
`;

exports[`<Icon> renders null if source is not a SVG 1`] = `null`;

exports[`<Icon> renders with specific attributes 1`] = `
<span
  className="Van-Icon"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
    }
  }
  data-id="0"
/>
`;

exports[`<Icon> renders with specific className 1`] = `
<span
  className="Van-Icon my-class"
  dangerouslySetInnerHTML={
    Object {
      "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\"><path d=\\"M1343 12v264h-157q-86 0-116 36t-30 108v189h293l-39 296h-254v759H734V905H479V609h255V391q0-186 104-288.5T1115 0q147 0 228 12z\\"/></svg>",
    }
  }
/>
`;
